# negative-price-calc

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  MESSAGING_REFINEMENTS.md  QUICKSTART.md  README.md  WEBAPP.md  app.py  docker-compose.yml  dump.json  instructions.md  main.py  pyproject.toml  run_webapp.py  test_core.py  test_openai_simple.py
.cursor/: scratchpad.md
cli/: __init__.py  main.py
core/: __init__.py  daily_analyzer.py  db_manager.py  db_manager_cli.py  negative_price_analysis.py  price_analyzer.py  price_fetcher.py  price_production_analyzer.py  production_loader.py
data/: email_logs.txt  price_data.db
data/cache/: 06dc8743-175f-415f-bba9-4a447d2ba85c.pkl  335efe06-8811-4769-8785-9b55fec30c4c.pkl  82f4f4d2-a9b5-4912-9336-09c168ef7e9c.pkl  86e73b00-aed3-4bc5-bb79-0d09bc9fcb47.pkl  8cba308f-9ab6-4722-9965-5e110e06892e.pkl  cc524920-7e2f-4c79-9e04-2ae839793179.pkl  d2bb9297-7f9b-43cc-af53-6e22e680326c.pkl  d48ce9fe-5de3-4eb0-8e2f-885a76e01bca.pkl
data/samples/: Produktion - Fredrik daily ID.xlsx  Produktion - Fredrik daily NO DATE.xlsx  Produktion - Fredrik daily mixed rows.xlsx  Produktion - Fredrik daily prod time.xlsx  Produktion - PM.csv  Produktion - Viktor hourly more headers.xlsx  history.numbers
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  railway.json
frontend/src/app/: globals.css  (+2 more)
scripts/: populate_prices.py
templates/: index.html
utils/: __init__.py  ai_explainer.py  ai_explainer_old.py  ai_table_reader.py  csv_format_detector_fallback.py  csv_format_module.py  hubspot_client.py
(+11 files in other folders)
